Make junk and filter logging localizable and use locale-sensitive date formatting. Bug 207550, original patch by sspitzer updated by me, r+sr=bienvenu